# reddit-contextual-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test_local.py
.github/workflows/: ci.yml  scrape.yml
src/reddit_agent/: __init__.py  __main__.py  config.py  contextual_client.py  logging_config.py  models.py  pipeline.py  scraper.py
src/reddit_agent/db/: __init__.py  base.py  supabase.py
tests/: __init__.py  conftest.py  test_config.py  test_contextual_client.py  test_database.py  test_models.py  test_pipeline.py  test_scraper.py
